# braille

./: .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  IMPL_ADOPT_NODE.md  IMPL_ATTR_NODES.md  IMPL_BASE_URI.md  IMPL_CSS_CASCADE.md  IMPL_DOM_API.md  IMPL_INVALID_PSEUDO.md  IMPL_PROCESSING_INSTRUCTION.md  IMPL_QUERY_UNSKIP.md  IMPL_SESSIONS.md  IMPL_SET_ATTRIBUTE_NS.md  IMPL_UNSKIP_DONE.md  IMPL_WPT_FIXES.md  IMPL_WPT_QUICK_WINS.md  PLAN.md  README.md  REFERENCE.md  SPIKE.md  WPT_STATUS.md  dev.sh
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  container.rs  daemon.rs  engine_process.rs  lib.rs  main.rs  network.rs  paths.rs  session.rs  session_store.rs  worker_manager.rs
crates/cli/tests/: engine_close.rs  fetch_integration.rs  kitchen_sink.rs  real_sites.rs  session_persistence.rs  spa_dynamic.rs  webpack_spa.rs  wikipedia_test.rs
crates/engine/: Cargo.toml
crates/engine/benches/: engine_bench.rs
crates/engine/src/: cookies.rs  fetch.rs  lib.rs  lib_tests.rs  loading.rs  meta_refresh.rs  navigation.rs  scripts.rs  transcript.rs
crates/engine/src/a11y/: mod.rs  serialize.rs
crates/engine/src/a11y/serialize/: accessibility.rs  compact.rs  helpers.rs  interactive.rs  mod.rs  (+2 more)
crates/engine/src/commands/: click.rs  focus.rs  form.rs  mod.rs  select_cmd.rs  type_cmd.rs
crates/engine/src/css/: cascade.rs  collection.rs  computed.rs  matching.rs  mod.rs  parser.rs  properties.rs  selector_impl.rs  style_tree.rs  values.rs
crates/engine/src/dom/: attributes.rs  css_support.rs  find.rs  mod.rs  node.rs  traversal.rs  tree.rs
crates/engine/src/html/: mod.rs  parser.rs
crates/engine/src/js/: crypto.rs  dom_bridge.rs  globals.rs  intl.rs  macros.rs  mod.rs  module_loader.rs  prop_desc.rs  realm_state.rs  runtime.rs  state.rs
crates/engine/tests/: adversarial.rs  anubis_challenges.rs  cookie_sync.rs  create_attribute.rs  css_edge_cases.rs  dom_bridge.rs  dom_bridge_core.rs  dom_bridge_forms.rs  dom_bridge_react.rs  dom_bridge_web_apis.rs  engine_repl.rs  es_modules.rs  form_validation.rs  frameworks.rs  html5lib_serializer.rs  html5lib_tree_construction.rs  integration.rs  link_basic.rs  link_onload.rs  location_navigate.rs  lodash_merge.rs  meta_refresh_tests.rs  proton_debug.rs  proton_signup.rs  react_controlled_input.rs  refresh_header.rs  replay.rs  runtime_reuse.rs  script_cookies.rs  script_execution.rs  smoke_integration.rs  snapshot_views.rs  webpack_chunks.rs  wpt_dom.rs
crates/engine/tests/fixtures/: anubis_techaro.json
(+129 files in other folders)
