[package]
name = "braille-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "braille"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
braille-wire = { path = "../wire" }
braille-engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
