[package]
name = "braille-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "braille_cli"
path = "src/lib.rs"

[[bin]]
name = "braille"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
braille-wire = { path = "../wire" }
braille-engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tiny_http = "0.12"
url = "2.5"
