[package]
name = "braille-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
braille-wire = { path = "../wire" }
boa_engine = "0.21"
boa_gc = "0.21"
html5ever = "0.38"
markup5ever = "0.38"
tendril = "0.5"
cssparser = "0.35"
selectors = "0.28"
precomputed-hash = "0.1"
url = "2.5"
quick-xml = "0.37"

[lints]
workspace = true

[dev-dependencies]
libtest-mimic = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[[test]]
name = "html5lib_tree_construction"
harness = false

[[test]]
name = "html5lib_serializer"
harness = false

[[test]]
name = "wpt_dom"
harness = false
