[package]
name = "braille-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
braille-wire = { path = "../wire" }
rquickjs = { version = "0.11", features = ["macro", "loader"] }
html5ever = "0.38"
markup5ever = "0.38"
tendril = "0.5"
cssparser = "0.35"
selectors = "0.28"
precomputed-hash = "0.1"
url = "2.5"
quick-xml = "0.37"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
ring = "0.17"
getrandom = "0.2"

[lints]
workspace = true

[[bin]]
name = "braille-engine"
path = "src/bin/braille_engine.rs"

[dev-dependencies]
libtest-mimic = "0.8"
criterion = "0.5"

[[bench]]
name = "engine_bench"
harness = false

[[test]]
name = "html5lib_tree_construction"
harness = false

[[test]]
name = "html5lib_serializer"
harness = false

[[test]]
name = "wpt_dom"
harness = false
